# nrf

./: .gitignore
applications/LL311_BLE/: CMakeLists.txt  Kconfig  ProjectNotes.docx  README.rst  VERSION  partitions.xlsx  pm_static.yml  prj.conf  sample.yaml  sysbuild.conf
applications/LL311_BLE/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
applications/LL311_BLE/doc/: LL311充电状态指示灯变化实施方案.docx  LL311电量指示灯变化实施方案.docx  LL311电量检测实施方案.docx  ProjectNotes.docx  pin_assignment.xlsx  低功耗实施方案.md  增加锁功能LED的API接口实施方案.docx  静止陆运海运模型训练方法.docx
applications/LL311_BLE/ext_module/nfc/api/: nfc_api.c  nfc_api.h
applications/LL311_BLE/ext_module/nfc/drivers/FM175XX/inc/: fm175xx_driver.h  fm175xx_reg.h  nfc_mifare.h  nfc_ntag.h  nfc_reader_api.h
applications/LL311_BLE/inc/: my_battery.h  my_ble_app.h  my_ble_core.h  my_ble_log.h  my_ble_scan.h  my_cmd_setting.h  my_comm.h  my_ctrl.h  my_dfu_jimi.h  my_gsensor.h  my_gsensor_algorithm.h  my_lte.h  my_main.h  my_motor.h  my_nfc.h  my_pm.h  my_ring_buf.h  my_shell.h  my_tool.h  my_version.h  my_wdt.h  my_zms_param.h
applications/LL311_BLE/src/: main.c  my_battery.c  my_ble_app.c  my_ble_core.c  my_ble_core.h  my_ble_log.c  my_ble_scan.c  my_cmd_setting.c  my_comm.h  my_ctrl.c  my_ctrl.h  my_dfu_jimi.c  my_gsensor.c  my_gsensor.h  my_gsensor_algorithm.c  my_lte.c  my_lte.h  my_main.h  my_motor.c  my_motor.h  my_nfc.c  my_nfc.h  my_pm.c  my_ring_buf.c  my_shell.c  my_shell.h  my_tool.c  my_version.h  my_wdt.c  my_zms_param.c
applications/LL311_BLE/tool/: log_to_csv.py  train_bayes.py
applications/LL311_BLE/tool/data/: land.csv  sea.csv  still.csv
(+4 files in other folders)
